--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.17.0",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-id-swiper": "^4.0.0",
     "react-router-dom": "^6.23.0",
     "swiper": "^11.1.1"
